<resources>
    <string name="app_name">Teachers Tool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_grupos">Grupos</string>
    <string name="menu_materias">Materias</string>
    <string name="menu_criterios">Criterios</string>
    <string name="menu_preferences">Configuracion</string>
    <string name="menu_about">Acerca</string>

    <string name="IdcGrupo">0</string>
    <string name="cGrnombre">Grupo</string>
    <string name="cGrPeriodos">0</string>
    <string name="cGrAlumnos">0</string>
    <string name="cGrTexto">Alumnos:</string>
    <string name="title_activity_cat_grupos">Grupos</string>
    <string name="title_activity_frm_grupos">Formulario</string>

    <string name="tituloFormularioGrupos">Nuevo grupo</string>
    <string name="subtituloFormularioNombre">Nombre:</string>
    <string name="subtituloFormularioPeriodo">No. de periodos:</string>
    <string name="tituloBotonGrupos">Guardar</string>
    <string name="tituloBotonGrupoMateria">Asignar</string>

    <string name="IdcCriterio">0</string>
    <string name="cCriNombre">Criterio</string>
    <string name="title_activity_cat_criterios">Criterios</string>
    <string name="title_activity_frm_criterios">Formulario</string>

    <string name="tituloFrmCriterioNvo">Nuevo Criterio</string>
    <string name="subtituloFrmCriterioNvoNombre">Criterio:</string>
    <string name="tituloBtnCriterioGruada">Guardar</string>

    <string name="cMatNombre">Materia</string>
    <string name="tituloFrmMateriaNvo">Nueva Materia</string>
    <string name="title_activity_cat_materias">Materias</string>
    <string name="title_activity_frm_materias">Formulario</string>
    <string name="tituloFormularioMaterias">Nueva materia</string>

    <string name="IdcAlumno">0</string>
    <string name="cAlNombre">Alumno</string>
    <string name="title_activity_cat_alumnos">AlumnosTe</string>
    <string name="title_activity_frm_alumnos">Formulario</string>
    <string name="tituloFrmAlumnoNvo">Nuevo Alumno</string>

    <string name="IdRGM">0</string>
    <string name="cGMNombre">Materia</string>
    <string name="title_activity_cat_grupo_materias">Materias en Grupo</string>
    <string name="title_activity_frm_grupo_materias">Asignaciones al grupo</string>

    <string name="IdSpinner">0</string>
    <string name="SpinnerNombre">Nombre</string>
    <string name="tituloFormularioRGM">Asignar materia:</string>
    <string name="tituloBotonRGM">Asignar</string>

    <string name="IdrGMC">0</string>
    <string name="rGMCIdCriterio">0</string>
    <string name="rGMCNombreCriterio">Nombre Criterio</string>
    <string name="rGMCPorcentaje">Porcentaje</string>
    <string name="title_activity_grupo_mat_criterio">Asignar Criterios</string>
    <string name="title_activity_frm_grup_mat_crit">Asignar Nuevo Criterio</string>

    <string name="IdSpinnerRGMC">0</string>
    <string name="SpinnerNombreCrit">Criterio</string>
    <string name="spnPorcentaje">Porcentaje</string>
    <string name="PorcentajeRGMC">0</string>
    <string name="tituloFormularioRGMC">Asignar Criterio</string>
    <string name="tituloBotonRGMC">Asignar</string>
    <string name="lblPorcentaje">Porcentaje:</string>



</resources>
