<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/IdrGMC"
        android:id="@+id/IdrGMC"
        android:visibility="invisible"
        android:textSize="@dimen/subtitlecatalogos"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:text="@string/rGMCIdCriterio"
        android:id="@+id/rGMCcCriID"
        android:textSize="@dimen/titlecatalogos"
        android:visibility="invisible"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="15sp"/>

    <TextView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="F"
        android:background="@drawable/shape_inicial"
        android:textColor="@color/colorTextShape"
        android:textSize="@dimen/inicialcatalogos"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/rGMCInical"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="5sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:text="@string/rGMCNombreCriterio"
        android:id="@+id/rGMCNombre"
        android:textSize="@dimen/titlecatalogos"
        android:textColor="@color/colorPrimaryText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/rGMCPorcentaje"
        android:id="@+id/rGMCPorcentaje"
        android:textSize="@dimen/subtitlecatalogos"
        android:textColor="@color/colorPrimaryText"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
