<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frm_materias"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.teamtools.teacherstool.frmMaterias"
    tools:showIn="@layout/activity_frm_materias"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tituloFormularioMaterias"
        android:id="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subtituloFormularioNombre"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNombre"
        android:hint="Nombre del la materia"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:text="@string/tituloBotonGrupos"
        android:textColor="#FFFFFF"
        android:elevation="5dp"
        android:id="@+id/btnGuardar"
        android:layout_gravity="right"
        android:background="@drawable/round_boton"
        android:drawableLeft="@drawable/ic_done_white_18dp"
        android:onClick="onClickGuardar" />
</LinearLayout>
