<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.teamtools.teacherstool.frmGrupMatCrit"
    tools:showIn="@layout/activity_frm_grup_mat_crit"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tituloFormularioRGMC"
        android:id="@+id/textView5" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:id="@+id/spnCriterios"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="100sp"
        android:layout_height="45sp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblPorcentaje"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15sp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_gravity="right"
        android:textAlignment="center"
        android:id="@+id/spnPorcentaje"
        android:scrollbarStyle="insideInset"
        android:spinnerMode="dropdown"/>


    <Button
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:text="@string/tituloBotonRGMC"
        android:textColor="#FFFFFF"
        android:elevation="5dp"
        android:id="@+id/btnGuardar"
        android:layout_gravity="right"
        android:background="@drawable/round_boton"
        android:drawableLeft="@drawable/ic_done_white_18dp"
        android:onClick="onClickGuardar" />


</LinearLayout>
